[package]
name = "firehose-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
atrium-api = "0.24.2"
atrium-xrpc = "0.11.3"
chrono = "0.4.34"
futures = "0.3.30"
ipld-core = { version = "0.4.0", default-features = false, features = ["std"] }
rs-car = "0.4.1"
serde = { version = "1.0.164", default-features = false, features = ["alloc"] }
serde_ipld_dagcbor = { version = "0.6.0", default-features = false, features = ["std"] }
serde_html_form = "0.2.6"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
trait-variant = "0.1.1"
cbor4ii = { version = "0.2.14", default-features = false, features = ["use_alloc"] }
bon = "2.2.1"
async-stream = "0.3.5"
