[package]
name = "firehose-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0"
atrium-api = "0.24.2"
atrium-xrpc = "0.11.3"
chrono = "0.4.34"
futures = "0.3.30"
ipld-core = { version = "0.4.0", default-features = false, features = ["std"] }
rs-car = "0.4.1"
serde = { version = "1.0.164", default-features = false, features = ["alloc"] }
serde_ipld_dagcbor = { version = "0.6.0", default-features = false, features = ["std"] }
serde_html_form = "0.2.6"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
trait-variant = "0.1.1"
cbor4ii = { version = "0.2.14", default-features = false, features = ["use_alloc"] }
bon = "2.2.1"
async-stream = "0.3.5"

# Lint groups for tracking:
# https://doc.rust-lang.org/rustc/lints/groups.html
# https://rust-lang.github.io/rust-clippy/master/index.html
# Also, use expect() instead of allow()

[lints.rust]
### Lint Groups
future_incompatible = "deny"
keyword_idents = "deny"
rust_2018_idioms = "deny"
rust_2018_compatibility = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
refining_impl_trait = "deny"
unused = "warn"

### Overrides
unsafe_code = { level = "allow", priority = 1 }
unused_imports = { level = "deny", priority = 1 }

[lints.clippy]
### Lint Groups
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

### Overrides
missing_errors_doc = { level = "warn", priority = 1 }
missing_panics_doc = { level = "warn", priority = 1 }